SERVER-14981 don't generate cell ids > coarsestIndexedLevel when building covering

(cherry picked from commit 6e90ddf91fdbbc578e499fcb736365498e47f55a)

Conflicts:
	src/mongo/db/query/expression_index.cpp